--- a/Scarb.toml
+++ b/Scarb.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria" }
+alexandria_bytes = { git = "https://github.com/keep-starknet-strange/alexandria" }
 starknet = ">=2.3.0"
 
 [[target.starknet-contract]]
