--- a/Scarb.toml
+++ b/Scarb.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [dependencies]
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria" }
 alexandria_bytes = { git = "https://github.com/keep-starknet-strange/alexandria" }
-starknet = ">=2.3.0"
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts" }
+starknet = ">=2.3.1"
 
 [[target.starknet-contract]]
