[test] init test

--- a/Scarb.toml
+++ b/Scarb.toml
@@ -8,6 +8,8 @@ version = "0.1.0"
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria" }
 alexandria_bytes = { git = "https://github.com/keep-starknet-strange/alexandria" }
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry" }
 starknet = ">=2.3.1"
 
 [[target.starknet-contract]]
+casm = true
