--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-name = "meson_starknet_demo"
+name = "meson_starknet"
 version = "0.1.0"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
