--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "ethers": "^6.9.1",
-    "starknet": "^5.19.5"
+    "get-starknet": "^3.0.1",
+    "starknet": "^5.25.0"
   },
   "scripts": {
     "build": "scarb build",
