[clean] clean toml file

--- a/Scarb.toml
+++ b/Scarb.toml
@@ -2,15 +2,12 @@
 name = "meson_starknet"
 version = "0.1.0"
 edition = "2024_07"
-
-# See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
+# See more keys at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
 starknet = "2.11.2"
 openzeppelin = "1.0.0"
-# alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria" }
 alexandria_bytes = "0.5.0"
-# snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry" }
 
 [[target.starknet-contract]]
 casm = true
