--- a/Scarb.toml
+++ b/Scarb.toml
@@ -8,6 +8,7 @@ edition = "2024_07"
 starknet = "2.11.2"
 openzeppelin = "1.0.0"
 alexandria_bytes = "0.5.0"
+cairo_test = "2.11.2"
 
 [[target.starknet-contract]]
 casm = true
